2010-06-19  Chris Morley

	* src/formats/mdlformat.cpp: Added warning message when reading
	misformed files with too many atoms or bonds. Bug #2971865

2010-06-18  Noel O'Boyle

	* doc/Doxyfile.in: Update to Doxygen 1.7.0 and turn SEARCHENGINE on.
	* doc/api-style.css (removed), doc/api-header.html: Old style file
	removed as out-of-date with respect to
	Doxygen 1.7.0 (instead, the automatically generated doxygen.css is used)

2010-06-17  Noel O'Boyle

	* src/stereo/perception.cpp: Fix to previous commit for Linux.

2010-06-17  Noel O'Boyle

	* src/mol.cpp(DeleteHydrogen), src/stereo/perception.cpp,
	include/openbabel/stereo/stereo.h: If a hydrogen is deleted, it is now
	converted to an ImplicitRef in any stereo objects that reference it.

2010-06-14  Chris Morley
	
	* data/atomtyp.txt: add IMPVAL for triply bonded O+ (for carbon
	monoxide). 
	
	* src/formats/xml/cmlformat.cpp(ReadMolecule): leave processing
	of hydrogenCount attributes until the structure is complete, so
	that explict H can count towards them. Also now handles 
	hydrogenCount=0. Fixes bug #3014855 (Daniel Lowe).
	
	Change specification URI. Clarify implicit H behaviour in description.
	
	* src/obconversion.cpp: temporarily reintroduce the lineend
	memory leak. It was crashing with CML input, which doesn't
	even use the line end buffer!

2010-06-14  Noel O'Boyle

	* src/graphsym.cpp: Fix my fix to memory leak (get rid of 'new')

2010-06-14  Noel O'Boyle

	* Add target "make docs" to make the Doyxgen docs: $ROOT/doc/Doxyfile.in
	is converted to $ROOT/Doxyfile by substituting the $BABEL_VERSION and
	the PATH to Dot.

2010-06-13  Noel O'Boyle

	* src/formats/pdbformat.cpp: Applying Richard Hall's patch to fix
	handling of CONECT records where bond order was split over two lines.
	This can occur, for example, with the sulfur in RS(=O)(=O)R'.

2010-06-13  Noel O'Boyle

	* src/obconversion.cpp: Applying Tim's patch to fix memory leak

2010-06-13  Jean Brefort  <jean.brefort@normalesup.org>
