@@ -1,3 +1,9 @@
+2010-06-20  Noel O'Boyle
+
+	* src/formats/mol2format.cpp: Removed obsolete code that was causing
+	performance problems on large files (e.g. proteins). Fixes
+	bug #3018188
+
 2010-06-19  Chris Morley
 
 	* src/formats/mdlformat.cpp: Added warning message when reading
